# ligthouse

./: .gitignore  ERRORS.md  MEMORY.md  README.md  SESSION.md  app.py  pyproject.toml
storage_dashboard/: __init__.py  classifier.py  cli.py  fsevents.py  runtime.py  scanner.py  server.py  store.py  tui.py
tests/: __init__.py  test_api.py  test_cli.py  test_runtime.py  test_skeleton.py  test_tui.py
web/: app.js  index.html  styles.css
