[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lighthouse-storage-dashboard"
version = "0.1.0"
description = "Local-only read-only storage dashboard."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lighthouse = "storage_dashboard.cli:main"

[tool.setuptools]
packages = ["storage_dashboard"]
